--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,10 @@ categories = ["command-line-utilities"]
 description = "An mdbook preprocessor for adding html-css classes to markdown."
 edition = "2018"
 exclude = [
-    "examples/*",
+  "examples/*",
 ]
 homepage = "https://github.com/reviewable/mdbook-classy"
-keywords = ["mdbook", "classy", "markdown", "commonmark","css"]
+keywords = ["mdbook", "classy", "markdown", "commonmark", "css"]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/reviewable/mdbook-classy"
@@ -18,6 +18,6 @@ repository = "https://github.com/reviewable/mdbook-classy"
 [dependencies]
 clap = "2.33"
 mdbook = "0.4"
-pulldown-cmark = "0.7"
-pulldown-cmark-to-cmark = "4.0"
+pulldown-cmark = {version = "0.9.3", default-features = false}
+pulldown-cmark-to-cmark = "11.0.0"
 serde_json = "1.0"
