--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,10 @@ readme = "README.md"
 repository = "https://github.com/reviewable/mdbook-classy"
 
 [dependencies]
+chrono = "0.4.31"
 clap = {version = "4.4.5", features = ["derive"]}
+env_logger = "0.10.0"
+log = "0.4.20"
 mdbook = "0.4"
 pulldown-cmark = {version = "0.9.3", default-features = false}
 pulldown-cmark-to-cmark = "11.0.0"
